# q2-asap

./: .gitattributes  .gitignore  LICENSE  MANIFEST.in  README.md  environment.yml  pyproject.toml  setup.cfg  setup.py  test_pysam_smor.ipynb  versioneer.py
.github/workflows/: ci.yml
ci/recipe/: meta.yaml
environments/: q2-asap-qiime2-tiny-2024.5.yml
q2_asap/: __init__.py  _formats.py  _methods.py  _transformers.py  _types.py  _version.py  analyzeAmplicons.py  analyzeAmplicons_pipeline.py  assayInfo.py  bamProcessor.py  citations.bib  formatOutput.py  new_analyzeAmplicons_pipeline.py  outputCombiner.py  plugin_setup.py  run_analyzeAmplicons_pipeline.py  smor.py
q2_asap/tests/: __init__.py  test_methods.py
q2_asap/tests/data/: COVIDseq_full_report.xsl  SARS2_157_1-20-22.bam  SARS2_variant_detection.json  asap_xmls.qza  bam_processor_result.qza  combined_xml_short.qza  config.toml  paired-end-demux-aligned.qza  paired-end-demux.qza  wuhan_sequence.fasta  wuhan_sequence.qza  wuhan_sequence_index.qza
q2_asap/tests/data/asap_parallel_output/: aligner_index_result.qza  output_combiner_result.qza
q2_asap/tests/data/asap_parallel_output/aligner_result/: .order
q2_asap/tests/data/asap_parallel_output/bam_processor_result/: .order  SARS2_1424866_xml.qza  SARS2_1425430_xml.qza
q2_asap/tests/data/asap_parallel_output/trimmer_results/: .order
q2_asap/tests/data/bwamem_copy/: SARS2_1424866_0-bwamem.bam  output.sam
q2_asap/tests/data/f4c7cf86-fcc1-4ede-9295-2a7b4a825d5f/: checksums.md5
q2_asap/tests/data/f4c7cf86-fcc1-4ede-9295-2a7b4a825d5f/data/: SARS2_157_1.bam
q2_asap/tests/data/f4c7cf86-fcc1-4ede-9295-2a7b4a825d5f/provenance/: citations.bib  metadata.yaml
q2_asap/tests/data/f4c7cf86-fcc1-4ede-9295-2a7b4a825d5f/provenance/action/: action.yaml
q2_asap/tests/data/f4c7cf86-fcc1-4ede-9295-2a7b4a825d5f/provenance/artifacts/169ba419-ad8f-41ee-a221-ab9e3bb47783/: metadata.yaml
q2_asap/tests/data/f4c7cf86-fcc1-4ede-9295-2a7b4a825d5f/provenance/artifacts/26d28552-1603-4043-a4fd-ef8c0ab67d2c/: VERSION  metadata.yaml
q2_asap/tests/data/f4c7cf86-fcc1-4ede-9295-2a7b4a825d5f/provenance/artifacts/7356d359-6bf2-485a-a3c3-a3e0e1c819bf/: metadata.yaml
(+3 files in other folders)
